--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_services_binding
 description: A Very Good Project created by Very Good CLI.
-version: 1.0.0+1
+version: 0.1.0
 publish_to: none
 
 environment:
